--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -28,6 +28,7 @@ html {
 body {
   font-family: "Jost", sans-serif;
   position: relative;
+  overflow-x: hidden;
 }
 
 .leaf-top {
